[gd_scene load_steps=7 format=2]

[ext_resource path="res://LooneyLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[node name="LooneyLips" type="Node2D"]
script = ExtResource( 1 )

[node name="Blackboard" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.25989
margin_right = 1920.0
margin_bottom = 1259.26
rect_scale = Vector2( 0.568645, 0.507776 )
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryText" type="RichTextLabel" parent="Blackboard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -119.0
margin_bottom = -376.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="LineEdit" parent="Blackboard"]
margin_left = 60.513
margin_top = 1002.95
margin_right = 1291.51
margin_bottom = 1118.95
custom_fonts/font = SubResource( 1 )
text = "TextBox"

[node name="TextureButton" type="TextureButton" parent="Blackboard"]
margin_left = 1320.16
margin_top = 1029.33
margin_right = 1369.16
margin_bottom = 1078.33
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLabel" type="RichTextLabel" parent="Blackboard/TextureButton"]
margin_left = 53.0
margin_top = -10.0
margin_right = 391.0
margin_bottom = 54.0
custom_fonts/normal_font = SubResource( 1 )
text = "OK!"
scroll_active = false
